pilot/pkg/config/kube/gateway/testdata/foreign-waypoint.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: example
spec:
  controllerName: example.com/waypoint-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-waypoint
  namespace: default
spec:
  gatewayClassName: example
  listeners:
  - name: http
    port: 80
    protocol: HTTP
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: mcp
  namespace: default
  labels:
    istio.io/use-waypoint: example-waypoint
spec:
  hosts:
  - mcp.example.com
  resolution: STATIC
  ports:
  - name: http
    number: 80
    protocol: HTTP
  endpoints:
  - address: 0.0.0.1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp
  namespace: default
spec:
  parentRefs:
  - group: networking.istio.io
    kind: ServiceEntry
    name: mcp
  rules:
  - backendRefs:
    - group: example.com
      kind: Backend
      name: mcp
status:
  parents:
  - parentRef:
      group: networking.istio.io
      kind: ServiceEntry
      name: mcp
    controllerName: example.com/waypoint-controller
    conditions:
    - lastTransitionTime: 2026-07-16T20:06:43Z
      message: Route was valid
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
  # Stale status written by older Istio versions; the Istio controller should remove it.
  - parentRef:
      group: networking.istio.io
      kind: ServiceEntry
      name: mcp
    controllerName: istio.io/gateway-controller
    conditions:
    - lastTransitionTime: 2026-07-16T20:06:43Z
      message: 'referencing unsupported backendRef: group "example.com" kind "Backend"'
      observedGeneration: 1
      reason: InvalidKind
      status: "False"
      type: ResolvedRefs
